--- a/config.json
+++ b/config.json
@@ -1,6 +1,9 @@
 {
-  "version": "V1.1.7",
   "auto_map_list_data": [],
+  "auto_map_nums": 0,
+  "character_id": 1,
+  "close_game": false,
+  "img_log": false,
   "map_list_data": [
     "map_1-1_1.json",
     "map_1-2_1.json",
@@ -62,5 +65,8 @@
     "map_3-6_4.json",
     "map_3-6_5.json",
     "map_3-6_6.json"
-  ]
+  ],
+  "team_change": false,
+  "team_id": 1,
+  "version": "V1.1.8"
 }
