--- a/config.json
+++ b/config.json
@@ -67,10 +67,10 @@
     "map_3-6_5.json",
     "map_3-6_6.json"
   ],
-  "team_change": true,
+  "team_change": false,
   "team_id": 1,
   "dungeon_team_id": 1,
-  "version": "V1.2.4",
+  "version": "V1.2.5",
   "commission": true,
   "gamepath": "G:\\Star Rail\\Game\\StarRail.exe"
 }
