--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ whl\Polygon3-3.0.9-cp311-cp311-win_amd64.whl
 cnocr>=2.2.2.3
 opencv_python==4.8.0.76
 opencv_python_headless==4.8.0.74
-Pillow==10.0.0
+Pillow>=10.0.1
 pynput==1.7.6
 pywin32
 pyautogui
