--- a/config.json
+++ b/config.json
@@ -17,6 +17,7 @@
     "map_2-1_2.json",
     "map_2-2_1.json",
     "map_2-2_2.json",
+    "map_2-2_3.json",
     "map_2-3_1.json",
     "map_2-3_2.json",
     "map_2-3_3.json",
