--- a/config.json
+++ b/config.json
@@ -86,5 +86,17 @@
   "skill": false,
   "auto_map_hide": false,
   "map_type": "map",
-  "proxy": "https://gh-proxy.com/"
+  "proxy": "https://gh-proxy.com/",
+  "dungeon_time": [
+    "配置1",
+    "配置2",
+    "配置2",
+    "配置1",
+    "配置1",
+    "配置2",
+    "配置3"
+  ],
+  "dungeon_time_flag": false,
+  "配置4": [],
+  "配置5": []
 }
