--- a/config.json
+++ b/config.json
@@ -67,7 +67,9 @@
     "map_3-6_3.json",
     "map_3-6_4.json",
     "map_3-6_5.json",
-    "map_3-6_6.json"
+    "map_3-6_6.json",
+    "map_3-7_1.json",
+    "map_3-7_2.json"
   ],
   "team_change": false,
   "team_id": 1,
