--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ loguru
 numpy
 whl\Polygon3-3.0.9-cp311-cp311-win_amd64.whl
 whl\psutil-5.9.0-cp311-cp311-win_amd64.whl
-cnocr>=2.2.2.3
+cnocr~=2.2.2.3
 opencv_python==4.8.0.76
 opencv_python_headless==4.8.0.74
 Pillow>=10.0.1
