--- a/config.json
+++ b/config.json
@@ -5,109 +5,43 @@
   "dungeon_character_id": 1,
   "close_game": false,
   "img_log": false,
-  "map_list_data": [
-    "map_1-1_1.json",
-    "map_1-2_1.json",
-    "map_1-2_2.json",
-    "map_1-2_3.json",
-    "map_1-3_1.json",
-    "map_1-3_2.json",
-    "map_1-3_3.json",
-    "map_2-1_1.json",
-    "map_2-1_2.json",
-    "map_2-2_1.json",
-    "map_2-2_2.json",
-    "map_2-2_3.json",
-    "map_2-3_1.json",
-    "map_2-3_2.json",
-    "map_2-3_3.json",
-    "map_2-3_4.json",
-    "map_2-3_5.json",
-    "map_2-4_1.json",
-    "map_2-4_2.json",
-    "map_2-5_1.json",
-    "map_2-5_2.json",
-    "map_2-5_3.json",
-    "map_2-5_4.json",
-    "map_2-6_1.json",
-    "map_2-6_2.json",
-    "map_2-7_1.json",
-    "map_2-7_2.json",
-    "map_2-7_3.json",
-    "map_3-1_1.json",
-    "map_3-1_2.json",
-    "map_3-1_3.json",
-    "map_3-1_4.json",
-    "map_3-1_5.json",
-    "map_3-1_6.json",
-    "map_3-2_1.json",
-    "map_3-2_2.json",
-    "map_3-2_3.json",
-    "map_3-2_4.json",
-    "map_3-2_5.json",
-    "map_3-2_6.json",
-    "map_3-3_1.json",
-    "map_3-3_2.json",
-    "map_3-3_3.json",
-    "map_3-3_4.json",
-    "map_3-3_5.json",
-    "map_3-4_1.json",
-    "map_3-4_2.json",
-    "map_3-4_3.json",
-    "map_3-4_4.json",
-    "map_3-4_5.json",
-    "map_3-4_6.json",
-    "map_3-5_1.json",
-    "map_3-5_2.json",
-    "map_3-5_3.json",
-    "map_3-5_4.json",
-    "map_3-5_5.json",
-    "map_3-5_6.json",
-    "map_3-6_1.json",
-    "map_3-6_2.json",
-    "map_3-6_3.json",
-    "map_3-6_4.json",
-    "map_3-6_5.json",
-    "map_3-6_6.json",
-    "map_3-7_1.json",
-    "map_3-7_2.json"
-  ],
+  "map_list_data": [],
   "team_change": false,
   "team_id": 1,
   "dungeon_team_id": 1,
   "commission": false,
+  "gamepath": "",
   "fontsize": 10,
   "fontfamily": "Microsoft YaHei UI",
-  "gamepath": "G:\\Star Rail\\Game\\StarRail.exe",
+  "skill": false,
+  "skill_food": false,
+  "auto_map_hide": true,
+  "map_type": "map",
+  "proxy": "https://gh-proxy.com/",
   "配置1": [],
   "配置2": [],
   "配置3": [],
-  "skill": false,
-  "auto_map_hide": false,
-  "map_type": "map",
-  "proxy": "https://gh-proxy.com/",
-  "dungeon_time": [
-    "配置1",
-    "配置3",
-    "配置2",
-    "配置1",
-    "配置1",
-    "配置2",
-    "配置3"
-  ],
-  "dungeon_time_flag": false,
   "配置4": [],
   "配置5": [],
-  "skill_food": false,
+  "dungeon_time": [
+    "配置1",
+    "配置1",
+    "配置1",
+    "配置1",
+    "配置1",
+    "配置1",
+    "配置1"
+  ],
+  "dungeon_time_flag": false,
   "universe_bonus": 0,
-  "universe_nums": 1,
+  "universe_nums": 34,
   "auto_universe": false,
+  "auto_map": false,
+  "auto_dungeon": false,
   "run_change": false,
-  "auto_map": true,
-  "auto_dungeon": true,
   "fight_time": 900,
-  "task_commission": true,
-  "task_supportrewards": true,
+  "task_commission": false,
+  "task_supportrewards": false,
   "task_rewards": false,
   "task_dailytask": false
 }
