--- a/maps/config.json
+++ b/maps/config.json
@@ -145,6 +145,7 @@
     "map_4-5_6.json",
     "map_4-5_7.json",
     "map_4-5_8.json",
+    "map_4-7_13.json",
     "map_4-6_1.json",
     "map_4-6_2.json",
     "map_4-6_3.json",
