--- a/maps/config.json
+++ b/maps/config.json
@@ -86,6 +86,7 @@
     "map_3-5_5.json",
     "map_3-5_6.json",
     "map_3-5_7.json",
+    "map_3-5_8.json",
     "map_1-4_4.json",
     "map_3-6_1.json",
     "map_3-6_2.json",
