--- a/maps/config.json
+++ b/maps/config.json
@@ -135,6 +135,8 @@
     "map_4-4_2.json",
     "map_4-4_3.json",
     "map_4-4_4.json",
+    "map_4-8_1.json",
+    "map_4-8_2.json",
     "map_4-4_5.json",
     "map_4-4_6.json",
     "map_4-4_7.json",
