--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ loguru
 numpy
 whl\Polygon3-3.0.9-cp311-cp311-win_amd64.whl
 whl\psutil-5.9.0-cp311-cp311-win_amd64.whl
+torch==2.0.1
 cnocr~=2.2.2.3
 opencv_python==4.8.0.76
 opencv_python_headless==4.8.0.74
