--- a/maps/config.json
+++ b/maps/config.json
@@ -102,6 +102,12 @@
     "map_3-7_4.json",
     "map_3-7_5.json",
     "map_3-7_6.json",
+    "map_3-8_1.json",
+    "map_3-8_2.json",
+    "map_3-8_3.json",
+    "map_3-8_4.json",
+    "map_3-8_5.json",
+    "map_3-8_6.json",
     "map_4-1_1.json",
     "map_4-1_2.json",
     "map_4-1_3.json",
