--- a/maps/config.json
+++ b/maps/config.json
@@ -108,6 +108,8 @@
     "map_3-8_4.json",
     "map_3-8_5.json",
     "map_3-8_6.json",
+    "map_3-8_7.json",
+    "map_3-8_8.json",
     "map_4-1_1.json",
     "map_4-1_2.json",
     "map_4-1_3.json",
